<resources>
    <string name="app_name">Calculator</string>

    <!-- Buttons -->
    <!-- Basic functions -->
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_point">.</string>
    <string name="button_dual_zero">00</string>
    <string name="button_addition">+</string>
    <string name="button_subtraction">-</string>
    <string name="button_multiplication">*</string>
    <string name="button_division">/</string>
    <string name="button_equal">=</string>
    <string name="button_del">DEL</string>
    <string name="button_sci">SCI</string>

    <!-- Scientific functions -->
    <string name="button_sine">sin</string>
    <string name="button_cosine">cos</string>
    <string name="button_tangent">tan</string>
    <string name="button_cosecant">cosec</string>
    <string name="button_secant">sec</string>
    <string name="button_cotangent">cot</string>
    <string name="button_power">^</string>
    <string name="button_square_root">√</string>
    <string name="button_pie">π</string>
    <string name="button_right_parenthesis">)</string>
    <string name="button_left_parenthesis">(</string>

    <!-- Result header -->
    <string name="result_header_text">Result:</string>

    <!-- Action Bar -->
    <!-- Set it as empty until fix app bar animation -->
    <string name="dark_mode_toggle">""</string>

</resources>