<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculation_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/calculation_view"
        android:layout_alignParentBottom="true"
        android:columnCount="5"
        android:rowCount="5">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_nine"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:padding="0dp"
            android:text="@string/button_nine"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_eight"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_eight"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_seven"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_seven"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_delete"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/button_del"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_six"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_six"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_five"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_five"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_four"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_four"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_division"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/button_division"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_three"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_three"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_two"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_two"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_one"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_one"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiplication"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/button_multiplication"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_point"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_point"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_zero"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_zero"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_addition"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_addition"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_subtraction"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/button_subtraction"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_scientific_part"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_sci"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            android:layout_rowWeight="1"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/button_equal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_theme"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_rowWeight="1"
            android:text="@string/button_theme"
            app:cornerRadius="0dp" />

    </GridLayout>
</RelativeLayout>