<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_nine"
        style="@style/Theme.NumberPad"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:onClick="onButtonClick"
        android:text="@string/button_nine"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_eight"
        style="@style/Theme.NumberPad"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:onClick="onButtonClick"
        android:text="@string/button_eight"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_seven"
        style="@style/Theme.NumberPad"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:onClick="onButtonClick"
        android:text="@string/button_seven"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_six"
        style="@style/Theme.NumberPad"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:onClick="onButtonClick"
        android:text="@string/button_six"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_five"
        style="@style/Theme.NumberPad"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:onClick="onButtonClick"
        android:text="@string/button_five"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_four"
        style="@style/Theme.NumberPad"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:onClick="onButtonClick"
        android:text="@string/button_four"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_three"
        style="@style/Theme.NumberPad"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:onClick="onButtonClick"
        android:text="@string/button_three"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_two"
        style="@style/Theme.NumberPad"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:onClick="onButtonClick"
        android:text="@string/button_two"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_one"
        style="@style/Theme.NumberPad"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:onClick="onButtonClick"
        android:text="@string/button_one"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_zero"
        style="@style/Theme.NumberPad"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:onClick="onButtonClick"
        android:text="@string/button_zero"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        style="@style/Theme.NumberPad"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:onClick="onButtonClick"
        android:text="@string/button_point"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

</merge>