<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sine"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:onClick="onButtonClick"
        android:text="@string/button_sine"
        android:textAllCaps="false"
        android:textSize="@dimen/button_sci_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cosine"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:onClick="onButtonClick"
        android:text="@string/button_cosine"
        android:textAllCaps="false"
        android:textSize="@dimen/button_sci_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_tangent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:onClick="onButtonClick"
        android:text="@string/button_tangent"
        android:textAllCaps="false"
        android:textSize="@dimen/button_sci_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cosecant"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:onClick="onButtonClick"
        android:text="@string/button_cosecant"
        android:textAllCaps="false"
        android:textSize="@dimen/button_sci_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_secant"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:onClick="onButtonClick"
        android:text="@string/button_secant"
        android:textAllCaps="false"
        android:textSize="@dimen/button_sci_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cotangent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:onClick="onButtonClick"
        android:text="@string/button_cotangent"
        android:textAllCaps="false"
        android:textSize="@dimen/button_sci_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_powers"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:onClick="onButtonClick"
        android:text="@string/button_power"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_square_root"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:onClick="onButtonClick"
        android:text="@string/button_square_root"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_pie"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:onClick="onButtonClick"
        android:text="@string/button_pie"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_left_parenthesis"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:onClick="onButtonClick"
        android:text="@string/button_left_parenthesis"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_right_parenthesis"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:onClick="onButtonClick"
        android:text="@string/button_right_parenthesis"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="0dp" />

</merge>